common-applications/test-environment/cvesa-test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: cvesa-test
  name: cvesa-test
