common-applications/test-environment/cvesa-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cvesa-test-service
  namespace: cvesa-test
spec:
  ports:
    - name: http-port
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: cvesa-test
  type: ClusterIP
