common-applications/test-environment/cvesa-test/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx   
  name: cvesa-test-ingress
  namespace: cvesa-test
spec:
  tls:
    - hosts:
        - cvesa.test.osinfra.cn
      secretName: cvesa-test-tls
  rules:
    - host: cvesa.test.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: cvesa-test-service
              servicePort: 80
            path: /
